@@ -3,8 +3,8 @@
 
 #### You can either work with
 ## 1 Setup static users and roles via [users] and [roles] section in this file below
-## 2 or use BCD-UI's bcd_sec_xxx BindingSets together with realmBcdJdbc below for a dynamic user administration
-## 2.1 or combine Windows SPNEGO SSO authentication with authorization by realmBcdJdbc
+## 2 Dynamic authentication and authorization
+## 2.1 use BCD-UI's bcd_sec_xxx BindingSets together with realmBcdJdbc below for a dynamic user administration
 ## 2.2 or combine authentication by OAuth combined with with authorization by realmBcdJdbc
 ## (In case you encounter and class FastHashMap not found exception on startup, you likely have an unknown property in this file)
 
@@ -23,6 +23,7 @@ realmSubjectPreferences = de.businesscode.bcdui.subjectsettings.SubjectPreferenc
 securityManager.realms = $realmBcdJdbc, $realmSubjectPreferences
 
 ## BCD-UI's overwrite of shiro's AuthenticationFilter
+## enabling 2.x, i.e. dynamic users and permissions with database bcd_sec_xxx and/or oAuth
 bcdAuthc = de.businesscode.bcdui.subjectsettings.AuthenticationFilter
 
 #### OAuth start (named option 2.2 above)
